Added more CSS, a Bootstrap modal, and adjusted the names on the fields.

--- a/EmployeeReviewer/Content/Site.css
+++ b/EmployeeReviewer/Content/Site.css
@@ -29,3 +29,11 @@ textarea {
     border-color: #fff
 }
 
+/* Add an ellipsis using CSSS */
+.text-short {
+    display: inline-block;
+    max-width: 150px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
