--- a/EmployeeReviewer/Views/Home/Index.cshtml
+++ b/EmployeeReviewer/Views/Home/Index.cshtml
@@ -7,13 +7,30 @@
     <p class="lead">EmployeeReviewer creates an easy-to-use web application to leave reviews for your employees and store it for historical purposes.</p>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
+<div class="row justify-content-center text-center">
+    <div class="col-4">
+        <h2>See All Reviews</h2>
         <p>
-            To view the current demo, click below. This will take you to the "Reviews" page which will let you see all current reviews stored in the database. You can also create, edit, and delete the reviews as needed.
+            View all the current reviews. You can also create, delete, and update existing reviews.
         </p>
-        <p>@Html.ActionLink("All Reviews","Index", "Reviews", null,new {@class = "btn btn-primary"})
-        
-        @*<a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a>*@</p>
+        <p>
+            @Html.ActionLink("All Reviews", "Index", "Reviews", null, new { @class = "btn btn-primary" })
+
+            @*<a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a>*@
+        </p>
     </div>
+
+    <div class="col-4">
+        <h2>Create A Review</h2>
+        <p>
+            Jump right in and create a brand new review that will then get saved to the database using Entity Framework.
+        </p>
+        <p>
+            @Html.ActionLink("All Reviews", "Create", "Reviews", null, new { @class = "btn btn-primary" })
+
+        @*<a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a>*@
+    </p>
+    </div>
+
+
+</div>
