--- a/EmployeeReviewer/Views/Reviews/Create.cshtml
+++ b/EmployeeReviewer/Views/Reviews/Create.cshtml
@@ -32,7 +32,7 @@
 
     <div class="form-group col">
         @Html.LabelFor(model => model.CreateDate, htmlAttributes: new { @class = "control-label" })
-        @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.EditorFor(model => model.CreateDate, "date",new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
     </div>
 
