--- a/EmployeeReviewer/Views/Reviews/Index.cshtml
+++ b/EmployeeReviewer/Views/Reviews/Index.cshtml
@@ -11,82 +11,115 @@
 </p>
 
 
-    <form asp-controller="Reviews" asp-action="Index" method="get" class="mb-3">
-        <div class="form-row">
-            <div class="col">
-                <input type="text" name="SearchName" class="form-control" placeholder="Search by employee name ">
-            </div>
-            <div class="col">
-                <input type="text" name="ReviewerName" class="form-control" placeholder="Search by reviewer name ">
-            </div>
-            <div class="col">
-                <input type="date" name="CreateDate" class="form-control" placeholder="Search by date created ">
-            </div>
-            <div class="col-1">
-                <input type="submit" class="btn btn-primary" style="width:100%" value="Search" />
-            </div>
+<form asp-controller="Reviews" asp-action="Index" method="get" class="mb-3">
+    <div class="form-row">
+        <div class="col">
+            <input type="text" name="SearchName" class="form-control" placeholder="Search by employee name ">
         </div>
-        
-    </form>
+        <div class="col">
+            <input type="text" name="ReviewerName" class="form-control" placeholder="Search by reviewer name ">
+        </div>
+        <div class="col-3">
+            <input type="submit" class="btn btn-primary" style="width:100%" value="Search" />
+        </div>
+    </div>
 
-    <table class="table table-hover" id="ReviewTable">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.EmployeeName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ReviewerName)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CreateDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Summary)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EmployeeSigned)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EmployerSigned)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ReviewType)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
+</form>
 
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmployeeName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ReviewerName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreateDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Summary)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmployeeSigned)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.EmployerSigned)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ReviewType)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ReviewId }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.ReviewId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ReviewId })
-                </td>
-            </tr>
-        }
 
-    </table>
+<table class="table table-hover" id="ReviewTable">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.EmployeeName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ReviewerName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreateDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Summary)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmployeeSigned)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.EmployerSigned)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ReviewType)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+
+    @foreach (var item in Model)
+    {
+        if(Model.Count() == 0)
+                {
+                    @Html.ViewBag("Empty")
+                }
+
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployeeName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReviewerName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreateDate)
+            </td>
+            <td>
+                <span class="text-short">@Html.DisplayFor(modelItem => item.Summary)</span>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployeeSigned)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.EmployerSigned)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ReviewType)
+            </td>
+            <td>
+
+                <a href="@Url.Action("Edit", "Reviews", new { id = item.ReviewId })" class="btn btn-info" data-toggle="tooltip" data-placement="top" title="Edit review">
+                    <img alt="Edit" src="@Url.Content("~/Images/edit.png")">
+                </a>
+                <a href="@Url.Action("Details", "Reviews", new { id = item.ReviewId })" class="btn btn-warning" data-toggle="tooltip" data-placement="top" title="View review">
+                    <img alt="Edit" src="@Url.Content("~/Images/details.png")">
+                </a>
+                <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#DeletionModal-@item.ReviewId" id="@item.ReviewId" >
+                    <img alt="Edit" src="@Url.Content("~/Images/delete.png")">
+                </button>
+
+                @using (Html.BeginForm("Delete/" + item.ReviewId, "Reviews", FormMethod.Post, null))
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="modal fade" id="DeletionModal-@item.ReviewId" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Delete Review </h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    Are you sure you want to delete this review?
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-danger">Delete Review</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </td>
+        </tr>
+    }
+</table>
