Fixed wording on home page

--- a/EmployeeReviewer/Views/Home/Index.cshtml
+++ b/EmployeeReviewer/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
             Jump right in and create a brand new review that will then get saved to the database using Entity Framework.
         </p>
         <p>
-            @Html.ActionLink("All Reviews", "Create", "Reviews", null, new { @class = "btn btn-primary" })
+            @Html.ActionLink("Create a Review", "Create", "Reviews", null, new { @class = "btn btn-primary" })
 
         @*<a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a>*@
     </p>
