--- a/EmployeeReviewer/Views/Reviews/Create.cshtml
+++ b/EmployeeReviewer/Views/Reviews/Create.cshtml
@@ -17,72 +17,71 @@
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-<div class="form-row">
-    <div class="form-group col">
-        @Html.LabelFor(model => model.EmployeeId, "EmployeeId", htmlAttributes: new { @class = "control-label" })
-        @Html.DropDownList("EmployeeId", null, htmlAttributes: new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
+    <div class="form-row">
+        <div class="form-group col">
+            Employee Name
+            @*@Html.LabelFor(model => model.EmployeeId, "EmployeeId", htmlAttributes: new { @class = "control-label" })*@
+            @Html.DropDownList("EmployeeId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="form-group col">
+            Reviewer
+            @*@Html.LabelFor(model => model.ReviewerId, "ReviewerId", htmlAttributes: new { @class = "control-label" })*@
+            @Html.DropDownList("ReviewerId", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ReviewerId, "", new { @class = "text-danger" })
+        </div>
+
+        <div class="form-group col">
+            Date
+            @*@Html.LabelFor(model => model.CreateDate, htmlAttributes: new { @class = "control-label" })*@
+            @Html.EditorFor(model => model.CreateDate, "date", new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
+        </div>
+
     </div>
 
-    <div class="form-group col">
-        @Html.LabelFor(model => model.ReviewerId, "ReviewerId", htmlAttributes: new { @class = "control-label" })
-        @Html.DropDownList("ReviewerId", null, htmlAttributes: new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.ReviewerId, "", new { @class = "text-danger" })
-    </div>
-
-    <div class="form-group col">
-        @Html.LabelFor(model => model.CreateDate, htmlAttributes: new { @class = "control-label" })
-        @Html.EditorFor(model => model.CreateDate, "date",new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
-    </div>
-
-</div>
-
-<div class="form-row">
-    <div class="form-group col">
-        @Html.LabelFor(model => model.Summary, htmlAttributes: new { @class = "control-label" })
-        @Html.TextAreaFor(model => model.Summary, 20, 50, new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.Summary, "", new { @class = "text-danger" })
-    </div>
-</div>
-
-<div class="form-row">
-    <div class="form-group col">
-        @Html.LabelFor(model => model.EmployeeSigned, htmlAttributes: new { @class = "control-label" })
-        <div class="checkbox">
-            @Html.EditorFor(model => model.EmployeeSigned, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.EmployeeSigned, "", new { @class = "text-danger" })
+    <div class="form-row">
+        <div class="form-group col">
+            @Html.LabelFor(model => model.Summary, htmlAttributes: new { @class = "control-label" })
+            @Html.TextAreaFor(model => model.Summary, 20, 50, new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.Summary, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <div class="form-group col">
-        @Html.LabelFor(model => model.EmployerSigned, htmlAttributes: new { @class = "control-label" })
-        <div class="checkbox">
-            @Html.EditorFor(model => model.EmployerSigned, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.EmployerSigned, "", new { @class = "text-danger" })
+    <div class="form-row">
+        <div class="form-group col">
+            @Html.LabelFor(model => model.EmployeeSigned, htmlAttributes: new { @class = "control-label" })
+            <div class="checkbox">
+                @Html.EditorFor(model => model.EmployeeSigned, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EmployeeSigned, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col">
+            @Html.LabelFor(model => model.EmployerSigned, htmlAttributes: new { @class = "control-label" })
+            <div class="checkbox">
+                @Html.EditorFor(model => model.EmployerSigned, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EmployerSigned, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group col">
+            @Html.LabelFor(model => model.ReviewType, "ReviewType", htmlAttributes: new { @class = "control-label" })
+            @Html.DropDownList("ReviewType", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ReviewType, "", new { @class = "text-danger" })
         </div>
     </div>
 
-    <div class="form-group col">
-        @Html.LabelFor(model => model.ReviewType, "ReviewType", htmlAttributes: new { @class = "control-label" })
-        @Html.DropDownList("ReviewType", null, htmlAttributes: new { @class = "form-control" })
-        @Html.ValidationMessageFor(model => model.ReviewType, "", new { @class = "text-danger" })
-    </div>
-</div>
 
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
-        </div>
+    <div class="form-row">
+        <input type="submit" value="Create" class="btn btn-success mr-2" />
+        <a href="@Url.Action("Index", "Reviews")" class="btn btn-dark">Back to List</a>
     </div>
 </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
